--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Copy code
 
     <div class="container">
         <div class="profile">
-            <img src="your-profile-picture-url" alt="Syed Askari">
+            <img src="https://media.licdn.com/dms/image/D4D03AQHdybORfMZBXQ/profile-displayphoto-shrink_800_800/0/1705006788886?e=1726099200&v=beta&t=Yt8uEzRPRnEw_IYkOR9JtgQgzq0ymhBedWldR4COwew" alt="Syed Askari">
             <h1>Syed Askari</h1>
             <h2>Operational Leader in Oilfield Services</h2>
         </div>
